--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Minecraft Farm – Prototype</title>
+    <title>Minecraft – Walk in the Park</title>
     <style>
       body {
         background: #222;
@@ -19,8 +19,7 @@
     </style>
   </head>
   <body>
-    <h1>Minecraft Farm – Prototype</h1>
-    <p>Step 1: Just sky + ground.</p>
+    <h1>Minecraft – Walk in the Park</h1>
     <canvas id="game" width="800" height="600"></canvas>
     <script src="game.js"></script>
   </body>
